# capra_arm

./: .gitignore  README.md
kinova_bringup/launch/: kinova_arm.launch
kinova_bringup/launch/config/: robot_parameters.yaml
kinova_driver/: CMakeLists.txt  package.xml
kinova_driver/include/kinova_driver/: kinova_api.h  kinova_arm.h  kinova_comm.h
kinova_driver/src/: kinova_api.cpp  kinova_arm.cpp  kinova_comm.cpp  kinova_joint_trajectory_controller.cpp
kinova_driver/src/ikfast/: jaco7dof_ik.cpp  jaco_ik.cpp  mico_ik.cpp
kinova_driver/src/joint_trajectory_action/: gripper_command_action_server.cpp
kinova_driver/src/nodes/: kinova_arm_driver.cpp  kinova_interactive_control.cpp
kinova_msgs/action/: Arm_KinovaPose.action
ovis_arm/: CMakeLists.txt  package.xml
ovis_arm/include/: ovis_arm.hpp
ovis_arm/launch/: ovis_arm.launch  ovis_arm_ethernet.launch
ovis_arm/src/: ovis_arm.cpp
ovis_bringup/: CMakeLists.txt  package.xml
ovis_bringup/config/: ovis_controllers.yaml  ovis_parameters.yaml  ovis_simulated_config.yaml
ovis_bringup/launch/: controller.launch  kinova_control.launch  kinova_driver.launch  ovis_arm.launch  ovis_moveit.launch  ovis_moveit_simulation.launch  ovis_sleep.launch  spacenav_cpp.launch
ovis_bringup/launch/config/: ovis_control.yaml  ovis_parameters.yaml
ovis_demo/: CMakeLists.txt  package.xml
ovis_demo/include/: ovis_demo.hpp
ovis_demo/launch/: ovis_demo.launch
ovis_demo/src/: ovis_demo.cpp
ovis_driver/: CMakeLists.txt  package.xml
ovis_driver/include/: ovis_driver.hpp
ovis_driver/launch/: ovis_driver.launch  ovis_driver_unity.launch
ovis_driver/src/: ovis_driver.cpp
ovis_gazebo/: README.md
ovis_gazebo/launch/: gazebo.launch  image_view.launch
ovis_jog_control/: CMakeLists.txt  package.xml
ovis_jog_control/launch/: jog_control.launch
ovis_jog_control/scripts/: ovis_action_server.py  ovis_control.py
ovis_jog_launch/config/: ovis_jog.yaml
ovis_manipulator_ikfast_plugin/: update_ikfast_plugin.sh
ovis_manipulator_ikfast_plugin/src/: ovis_manipulator_ikfast_solver.cpp
ovis_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ovis_moveit/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ovis.srdf  ros_controllers.yaml
ovis_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  ovis_controller_spawner.launch  ovis_moveit_controller_manager.launch.xml  planning_context.launch  planning_execution.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ovis_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
ovis_moveit_config/config/: controllers.yaml  controllers_ros_control.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  ovis.srdf  ros_controllers.yaml
ovis_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  move_group_ovis.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  ovis_gazebo_demo.launch  ovis_moveit_controller_manager.launch.xml  ovis_ros_control_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  setup_assistant.launch  trajectory_execution.launch.xml
ovis_msgs/: CMakeLists.txt  package.xml
ovis_msgs/msg/: OvisJointAngle.msg  OvisJointPosition.msg  OvisJointVelocity.msg
ovis_rviz/: CMakeLists.txt  package.xml
ovis_rviz/launch/: rviz.launch
