<?xml version="1.0"?>
<package>
  <name>ovis_bringup</name>
  <version>0.0.0</version>
  <description>
      The ovis_bringup package.
      Contains launch files for interacting with Ovis arm. 
  </description>

  <maintainer email="capra@clubcapra.com">Capra</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

</package>