<?xml version="1.0"?>
<package format="2">
  <name>ovis_driver</name>
  <version>0.0.0</version>
  <description>
      The ovis_driver package.
      Contains driver for interacting with Kinova actuators. 
  </description>

  <maintainer email="ludovicvanasse@gmail.com">Ludovic Vanasse</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kinova_driver</build_depend>
  <build_depend>kinova_msgs</build_depend>
  <build_depend>ovis_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>kinova_driver</exec_depend>
  <exec_depend>kinova_msgs</exec_depend>
  <exec_depend>ovis_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>