<?xml version="1.0"?>
<package format="2">
  <name>ovis_jog_control</name>
  <version>0.0.0</version>
  <description>The ovis_jog_control package</description>


  <maintainer email="alex@todo.todo">alex</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roslaunch</build_depend>

  <exec_depend>rospy</exec_depend>

</package>
